rhdlc/test/compile-fail/identifier/path_segment_keyword/expected.txt
error: `r#self` cannot be a raw identifier
 --> top.rhdl:1:4
  |
1 | mod r#self;
  |     ^^^^^^ 
